--- a/forgot-password.html
+++ b/forgot-password.html
@@ -88,10 +88,9 @@
                 <img src="image/sn_eyes_open.png" alt="" aria-hidden="true" />
               </button>
             </div>
-
-            <!-- Change button -->
-            <button type="submit" class="login">CHANGE</button>
           </div>
+          <!-- Change button moved below the frame to keep frame size unchanged -->
+          <button type="submit" class="login">CHANGE</button>
         </form>
       </section>
     </div>
