--- a/manage-product-page.html
+++ b/manage-product-page.html
@@ -9,18 +9,20 @@
   </head>
   <body class="dashboard-page">
     <div class="dashboard-container">
-      <!-- Left Sidebar -->
-      <aside class="sidebar">
-        <div class="sidebar-header">
-          <p>current user : <span id="current-user-id">ADMIN001</span></p>
+      <!-- Top Navigation Bar -->
+      <header class="top-navbar">
+        <!-- Logo Section (Left) -->
+        <div class="navbar-logo">
+          <a href="manage-product-page.html" class="logo-link">
+            <img src="image/sportNexusLatestLogo.png" alt="Sport Nexus" class="logo-img" />
+            <span class="logo-text">Sport Nexus</span>
+          </a>
         </div>
-        <nav class="sidebar-nav">
-          <div class="user-btn-wrapper">
-            <a href="#" class="nav-btn user-btn" onclick="toggleUserSubmenu(event)">
-              <div style="position: relative; width: 24px; height: 24px;">
-                <img src="image/sn_user.png" alt="User" class="nav-icon" />
-                <img src="image/sn_hover_user.png" alt="User" class="nav-icon-hover" />
-              </div>
+
+        <!-- Main Navigation Links (Center) -->
+        <nav class="navbar-nav">
+          <div class="user-nav-wrapper">
+            <a href="#" class="nav-link user-nav-link" onclick="toggleUserSubmenu(event)">
               <span>USER</span>
             </a>
             <div class="user-submenu" id="user-submenu">
@@ -35,43 +37,35 @@
               </a>
             </div>
           </div>
-          <a href="statistic-page.html" class="nav-btn">
-            <div style="position: relative; width: 24px; height: 24px;">
-              <img src="image/sn_statistic.png" alt="Statistic" class="nav-icon" />
-              <img src="image/sn_hover_statistic.png" alt="Statistic" class="nav-icon-hover" />
-            </div>
-            <span>STATISTIC</span>
-          </a>
-          <a href="manage-product-page.html" class="nav-btn active">
-            <div style="position: relative; width: 24px; height: 24px;">
-              <img src="image/sn_manage_product.png" alt="Manage Product" class="nav-icon" />
-              <img src="image/sn_hover_manage_product.png" alt="Manage Product" class="nav-icon-hover" />
-            </div>
-            <span>MANAGE PRODUCT</span>
-          </a>
-          <a href="new-po-page.html" class="nav-btn">
-            <div style="position: relative; width: 24px; height: 24px;">
-              <img src="image/sn_new_po.png" alt="Inventory Purchase" class="nav-icon" />
-              <img src="image/sn_hover_new_po.png" alt="Inventory Purchase" class="nav-icon-hover" />
-            </div>
-            <span>INVENTORY PURCHASE</span>
-          </a>
-          <a href="general-settings.html" class="nav-btn">
-            <div style="position: relative; width: 24px; height: 24px;">
-              <img src="image/sn_setting.png" alt="General" class="nav-icon" />
-              <img src="image/sn_hover_settings.png" alt="General" class="nav-icon-hover" />
-            </div>
-            <span>GENERAL</span>
-          </a>
-          <a href="#" class="nav-btn logout-btn" onclick="handleLogout()">
-            <div style="position: relative; width: 24px; height: 24px;">
-              <img src="image/sn_log_out.png" alt="Log Out" class="nav-icon" />
-              <img src="image/sn_hover_log_out.png" alt="Log Out" class="nav-icon-hover" />
-            </div>
-            <span>LOG OUT</span>
-          </a>
+          <a href="statistic-page.html" class="nav-link">STATISTIC</a>
+          <a href="manage-product-page.html" class="nav-link active">MANAGE PRODUCT</a>
+          <a href="new-po-page.html" class="nav-link">INVENTORY PURCHASE</a>
+          <a href="general-settings.html" class="nav-link">GENERAL</a>
         </nav>
-      </aside>
+
+        <!-- Utility Section (Right) -->
+        <div class="navbar-utils">
+          <div class="user-info">
+            <span class="user-label">User:</span>
+            <span class="user-id" id="current-user-id">ADMIN001</span>
+          </div>
+          <div class="nav-separator"></div>
+          <button class="logout-btn-nav" onclick="handleLogout()" aria-label="Logout">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+              <polyline points="16 17 21 12 16 7"></polyline>
+              <line x1="21" y1="12" x2="9" y2="12"></line>
+            </svg>
+          </button>
+          <button class="mobile-menu-btn" id="mobile-menu-btn" aria-label="Menu">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <line x1="3" y1="6" x2="21" y2="6"></line>
+              <line x1="3" y1="12" x2="21" y2="12"></line>
+              <line x1="3" y1="18" x2="21" y2="18"></line>
+            </svg>
+          </button>
+        </div>
+      </header>
 
       <!-- Main Content Area -->
       <main class="main-content manage-product-main">
@@ -124,79 +118,81 @@
 
         <!-- Filter/Search Bar -->
         <div class="filter-bar">
-          <div class="search-box">
-            <div style="position: relative; width: 20px; height: 20px; flex-shrink: 0;">
-              <img src="image/sn_icon_search.png" alt="Search" class="search-icon" />
-              <img src="image/sn_icon_hover_search.png" alt="Search" class="search-icon-hover" />
+          <div class="filter-bar-left-group">
+            <div class="search-box">
+              <div style="position: relative; width: 20px; height: 20px; flex-shrink: 0;">
+                <img src="image/sn_icon_search.png" alt="Search" class="search-icon" />
+                <img src="image/sn_icon_hover_search.png" alt="Search" class="search-icon-hover" />
+              </div>
+              <input type="text" placeholder="SEARCH" class="search-input" id="product-search-input" />
             </div>
-            <input type="text" placeholder="SEARCH" class="search-input" id="product-search-input" />
-          </div>
-          <div class="status-btn-wrapper">
-            <button class="filter-btn status-btn" id="status-filter-btn">
-              <span>STATUS</span>
-              <div style="position: relative; width: 16px; height: 16px;">
-                <img src="image/sn_icon_arrow_up.png" alt="Arrow" class="filter-icon filter-icon-up" />
-                <img src="image/sn_icon_hover_arrow_up.png" alt="Arrow" class="filter-icon-hover filter-icon-hover-up" />
-                <img src="image/sn_icon_arrow_down.png" alt="Arrow" class="filter-icon filter-icon-down" />
-                <img src="image/sn_icon_hover_arrow_down.png" alt="Arrow" class="filter-icon-hover filter-icon-hover-down" />
+            <div class="status-btn-wrapper">
+              <button class="filter-btn status-btn" id="status-filter-btn">
+                <span>STATUS</span>
+                <div style="position: relative; width: 16px; height: 16px;">
+                  <img src="image/sn_icon_arrow_up.png" alt="Arrow" class="filter-icon filter-icon-up" />
+                  <img src="image/sn_icon_hover_arrow_up.png" alt="Arrow" class="filter-icon-hover filter-icon-hover-up" />
+                  <img src="image/sn_icon_arrow_down.png" alt="Arrow" class="filter-icon filter-icon-down" />
+                  <img src="image/sn_icon_hover_arrow_down.png" alt="Arrow" class="filter-icon-hover filter-icon-hover-down" />
+                </div>
+              </button>
+              <div class="status-submenu" id="status-submenu">
+                <button class="status-option-btn" data-status="active">ACTIVE</button>
+                <button class="status-option-btn" data-status="inactive">INACTIVE</button>
               </div>
-            </button>
-            <div class="status-submenu" id="status-submenu">
-              <button class="status-option-btn" data-status="active">ACTIVE</button>
-              <button class="status-option-btn" data-status="inactive">INACTIVE</button>
             </div>
-          </div>
-          <div class="date-btn-wrapper">
-            <button class="filter-btn date-btn" id="date-filter-btn">
-              <span>DATE</span>
-              <div style="position: relative; width: 16px; height: 16px;">
-                <img src="image/sn_icon_arrow_up.png" alt="Arrow" class="filter-icon filter-icon-up" />
-                <img src="image/sn_icon_hover_arrow_up.png" alt="Arrow" class="filter-icon-hover filter-icon-hover-up" />
-                <img src="image/sn_icon_arrow_down.png" alt="Arrow" class="filter-icon filter-icon-down" />
-                <img src="image/sn_icon_hover_arrow_down.png" alt="Arrow" class="filter-icon-hover filter-icon-hover-down" />
-              </div>
-            </button>
-            <div class="date-picker" id="date-picker">
-              <div class="date-picker-inputs">
-                <div class="date-input-group">
-                  <label>Start Date</label>
-                  <input type="text" class="date-input" id="start-date-input" placeholder="DD/MM/YYYY" />
+            <div class="date-btn-wrapper">
+              <button class="filter-btn date-btn" id="date-filter-btn">
+                <span>DATE</span>
+                <div style="position: relative; width: 16px; height: 16px;">
+                  <img src="image/sn_icon_arrow_up.png" alt="Arrow" class="filter-icon filter-icon-up" />
+                  <img src="image/sn_icon_hover_arrow_up.png" alt="Arrow" class="filter-icon-hover filter-icon-hover-up" />
+                  <img src="image/sn_icon_arrow_down.png" alt="Arrow" class="filter-icon filter-icon-down" />
+                  <img src="image/sn_icon_hover_arrow_down.png" alt="Arrow" class="filter-icon-hover filter-icon-hover-down" />
                 </div>
-                <div class="date-input-group">
-                  <label>End Date</label>
-                  <input type="text" class="date-input" id="end-date-input" placeholder="DD/MM/YYYY" />
+              </button>
+              <div class="date-picker" id="date-picker">
+                <div class="date-picker-inputs">
+                  <div class="date-input-group">
+                    <label>Start Date</label>
+                    <input type="text" class="date-input" id="start-date-input" placeholder="DD/MM/YYYY" />
+                  </div>
+                  <div class="date-input-group">
+                    <label>End Date</label>
+                    <input type="text" class="date-input" id="end-date-input" placeholder="DD/MM/YYYY" />
+                  </div>
                 </div>
-              </div>
-              <div class="date-picker-header">
-                <select class="month-select" id="month-select">
-                  <option value="0">January</option>
-                  <option value="1">February</option>
-                  <option value="2">March</option>
-                  <option value="3">April</option>
-                  <option value="4">May</option>
-                  <option value="5">June</option>
-                  <option value="6">July</option>
-                  <option value="7">August</option>
-                  <option value="8">September</option>
-                  <option value="9">October</option>
-                  <option value="10">November</option>
-                  <option value="11">December</option>
-                </select>
-                <select class="year-select" id="year-select"></select>
-              </div>
-              <div class="date-picker-weekdays">
-                <div>M</div>
-                <div>T</div>
-                <div>W</div>
-                <div>T</div>
-                <div>F</div>
-                <div>S</div>
-                <div>S</div>
-              </div>
-              <div class="date-picker-days" id="date-picker-days"></div>
-              <div class="date-picker-actions">
-                <button class="date-picker-back-btn">Back</button>
-                <button class="date-picker-apply-btn">Apply</button>
+                <div class="date-picker-header">
+                  <select class="month-select" id="month-select">
+                    <option value="0">January</option>
+                    <option value="1">February</option>
+                    <option value="2">March</option>
+                    <option value="3">April</option>
+                    <option value="4">May</option>
+                    <option value="5">June</option>
+                    <option value="6">July</option>
+                    <option value="7">August</option>
+                    <option value="8">September</option>
+                    <option value="9">October</option>
+                    <option value="10">November</option>
+                    <option value="11">December</option>
+                  </select>
+                  <select class="year-select" id="year-select"></select>
+                </div>
+                <div class="date-picker-weekdays">
+                  <div>M</div>
+                  <div>T</div>
+                  <div>W</div>
+                  <div>T</div>
+                  <div>F</div>
+                  <div>S</div>
+                  <div>S</div>
+                </div>
+                <div class="date-picker-days" id="date-picker-days"></div>
+                <div class="date-picker-actions">
+                  <button class="date-picker-back-btn">Back</button>
+                  <button class="date-picker-apply-btn">Apply</button>
+                </div>
               </div>
             </div>
           </div>
@@ -207,7 +203,6 @@
           <table class="member-table">
             <thead>
               <tr>
-                <th></th>
                 <th>Product Code</th>
                 <th>Product Name</th>
                 <th>Brand</th>
@@ -331,7 +326,7 @@
           </div>
           <div class="edit-user-field-group">
             <label for="add-product-quantity">QUANTITY <span style="color: #9D5858;">*</span></label>
-            <input type="number" id="add-product-quantity" class="edit-user-input" placeholder="Enter quantity" min="0" step="1" required />
+            <input type="number" id="add-product-quantity" class="edit-user-input" placeholder="Enter quantity" min="1" step="1" required />
           </div>
           <div class="edit-user-field-group">
             <label for="add-product-status">STATUS</label>
@@ -426,6 +421,36 @@
 
         <!-- Save Changes button -->
         <button class="position-save-btn" id="save-edit-product-btn">SAVE CHANGES</button>
+      </div>
+    </div>
+
+    <!-- Staff Authentication Dialog -->
+    <div class="logout-dialog-overlay" id="staff-authentication-overlay" style="display: none;">
+      <div class="logout-dialog">
+        <p class="logout-dialog-message">STAFF AUTHENTICATION REQUIRED</p>
+        <p style="color: #666; font-size: 0.85rem; margin-bottom: 1rem;">Please enter your username and password to proceed with this action.</p>
+        <div style="margin-bottom: 1.5rem;">
+          <input type="text" id="staff-auth-username" class="edit-user-input" placeholder="Enter your username" style="margin-bottom: 1rem;" />
+          <div class="input-wrap" style="position: relative;">
+            <input type="password" id="staff-auth-password" class="edit-user-input" placeholder="Enter your password" />
+            <button
+              type="button"
+              class="toggle-visibility"
+              aria-label="Show password"
+              aria-pressed="false"
+              data-target="staff-auth-password"
+              data-state="hidden"
+            >
+              <span class="sr-only">Toggle password visibility</span>
+              <img src="image/sn_eyes_closed.png" alt="" aria-hidden="true" />
+            </button>
+          </div>
+          <textarea id="staff-auth-reason" class="edit-user-input" placeholder="Enter reason (optional)" rows="3" style="margin-top: 1rem; resize: vertical;"></textarea>
+        </div>
+        <div class="logout-dialog-buttons">
+          <button class="logout-dialog-btn" id="staff-auth-verify">VERIFY</button>
+          <button class="logout-dialog-btn" id="staff-auth-cancel">CANCEL</button>
+        </div>
       </div>
     </div>
 
